--- a/커스텀엔진 에이전트 실습/4. MCP 커넥터 이용해보기.md
+++ b/커스텀엔진 에이전트 실습/4. MCP 커넥터 이용해보기.md
@@ -2,7 +2,7 @@
 이번 세션에서는 MCP 커넥터를 이용하여 Agent에 메일 발신 기능을 추가해 보도록 하겠습니다.
 
 
-## ❓ What is MCP?
+## ❓ 1.What is MCP?
 
 [Model Context Protocol (MCP)](https://modelcontextprotocol.io/introduction)는 애플리케이션이 LLM에 컨텍스트를 제공하는 방법을 표준화하는 오픈 프로토콜입니다. 이 프로토콜은 [Anthropic](https://www.anthropic.com/)에서 정의했습니다. MCP는 AI 모델을 다양한 데이터 소스와 도구에 연결하는 표준화된 방법을 제공합니다. 이를 통해 제작자는 기존 지식 서버와 API를 Copilot Studio에 직접 통합할 수 있습니다.
 
@@ -12,7 +12,7 @@
 
 > 이미지와 관련된 원본은 [여기](https://www.claudemcp.com/ko/blog/mcp-vs-api)에서 참고할 수 있습니다.
 
-## 🆚 MCP vs Connectors
+## 🆚 2.MCP vs Connectors
 
 ✅ MCP는 언제 사용하나요?
 
@@ -37,7 +37,7 @@ MCP 서버는 커넥터 인프라를 활용해 엔터프라이즈 보안 및 거
 
 따라서 **MCP + 커넥터** = 더 강력한 통합입니다.
 
-## 🛠️Copilot Studio  Pre-built MCP Connector
+## 🛠️ 3.Copilot Studio Pre-built MCP Connector
 MCP 서버와 커넥터를 직접 생성하여 운영하면, 회사 내부의 시스템을 조회하거나 외부의 시스템에 안전하게 접근할 수 있습니다. 
 그렇지만, 모든 서비스를 직접 다 만들어 쓸수는 없기 때문에 많은 Service Provider는 자체적으로 MCP서버를 구축하여 커넥터를 배포하고 있고
 Copilot studio에서도 몇가지 Pre-built 커넥터를 확인할 수 있습니다.
@@ -46,3 +46,32 @@ Copilot studio에서도 몇가지 Pre-built 커넥터를 확인할 수 있습니
 
 > 엔터프라이즈 mcp 서버를 구축하고 커넥터를 만드는 자세한 설명은 [이곳](https://github.com/ChangJu-Ahn/mcsmcp-KR/blob/main/README.md) 을 참조해 주세요
 > 
+
+---
+
+## 🌟 4. 실습
+지금부터 Copilot Studio가 제공하는 Pre-built MCP중 하나인 Outlook Mail MCP 서버를 이용하여 에이전트에게 메일 발송기능을 부여해 보도록 하겠습니다.
+
+<img width="891" height="1109" alt="image" src="https://github.com/user-attachments/assets/f9b213b6-7538-40f8-b7ce-e267f9aee8ee" />
+
+> 이번 실습에는 MCP서버를 통해 메일 발송만 진행하지만,
+실제 Outlook 메일 MCP 서버를 활용하면, 메일 읽기, 쓰기, 열람, 포워딩, 플래그등 각각의 작업별로 하나씩 커넥터를 생성 및 등록을 해주어야 하는 번거로운 일을 하지 않고서 MCP서버 커넥터 하나에서 모든것을 처리할 수 있도록 구성할 수 있습니다.
+<br> <br>
+
+먼저 MCP커넥터를 추가하기 위해 **[개요]** 에서 [도구] 섹션의 [+ 도구 추가]를 선택합니다.
+이후 팝업창에서 **[모델 컨테스트 프로토콜]** 을 클릭하고 **[이메일 관리 MCP 서버]** 를 선택합니다.
+<img width="1268" height="868" alt="image" src="https://github.com/user-attachments/assets/de790368-4eff-4f54-858e-660372e8a3b8" />
+
+
+> MCP 서버도 커스텀 커넥터와 마찬가지로 **커넥터 인프라**를 활용 합니다. 따라서 도구 섹션에서 추가 및 관리를 합니다!
+<br> <br>
+
+최초 선택이 되면 아래와 같이 연결이 없는 것으로 표시가 되므로, 연결을 추가하고 [만들기] 를 눌러 계정 정보를 연결합니다. <br> ⚠️로그인에 사용되는 계정정보는, 실제 MCP 서버에서 메일을 발송할 때 이용하는 사용자의 계정정보입니다.
+<img width="1085" height="797" alt="image" src="https://github.com/user-attachments/assets/47179d3f-9dc7-4536-9621-cd822b079a80" />
+<img width="1124" height="792" alt="image" src="https://github.com/user-attachments/assets/5c5a2ac7-cf5a-491f-b489-b22d9e730e2e" />
+<img width="743" height="707" alt="image" src="https://github.com/user-attachments/assets/b5282967-b56d-4028-86e9-7f3598be2ca0" />
+
+사용자 계정 연결이 완료되면 [추가 및 구성]을 선택하여 에이전트에 MCP 도구를 추가합니다.
+
+<img width="1077" height="783" alt="image" src="https://github.com/user-attachments/assets/ab4d5fe0-804d-4e73-8e73-9a4e5d67ab23" />
+
